# swear-jar

./: .gitignore  .prettierrc  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  swears-db.sqlite
.claude/: settings.local.json
service/: .env.development  Dockerfile  bunfig.toml  package.json
service/src/app/: App.tsx  index.html
service/src/components/: ProgressBar.tsx
service/src/data/: swears-store.test.ts  swears-store.ts
service/src/errors/: NonOpenWebSocketError.ts  index.ts
service/src/hooks/: useSwearsData.ts  useURLParams.ts
service/src/router/: router.ts  websocket.ts
service/src/types/: Params.ts  RouteValidationResult.ts
shared/: package.json
src/: index.ts  test-setup.ts
src/app/: index.css
src/components/: ProgressBar.tsx
src/data/: db.ts  swears-store.ts
src/errors/: BadWorkerDataError.ts
src/hooks/: useURLParams.ts
src/router/: websocket.ts
src/router/api/: swears.ts  (+1 more)
src/types/: SwearsResponse.ts  WebSocketData.ts
src/utils/: logger.ts  rateLimits.ts
src/workers/: swears.worker.ts
vox/: .env.development  .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  swear_words.txt
vox/src/: api_client.py  audio.py  cli.py  config.py  config_screen.py  halp.py  logging_setup.py  main.py  processing.py  swear_detection.py  transcription.py  vox.tcss  widgets.py
vox/src/app/: App.tsx
vox/src/components/: Greeting.tsx
vox/src/styles/: config.tcss
vox/src/widgets/: __init__.py  api_config_screen.py  audio_level_bar.py  channel_select.py  device_select.py  status_panel.py  transcript_view.py
(+10 files in other folders)
