[project]
name = "vox"
version = "0.1.0"
description = "Python/Textual TUI for speech recognition and swear detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0,<3.0.0",
    "faster-whisper>=1.0.0,<2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
